--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,120 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*--------------------------------------------------------------
+# prosoft
+--------------------------------------------------------------*/
+.prosoft {
+  background: linear-gradient(rgba(2, 0, 9, 0.95), rgba(43, 29, 61, 0.7)), url("https://images.unsplash.com/photo-1487017159836-4e23ece2e4cf?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=751&q=80") fixed center center;
+  background-size: cover;
+  padding: 60px 0;
+}
+
+.prosoft h3 {
+  color: #fff;
+  font-size: 28px;
+  font-weight: 700;
+}
+
+.prosoft p {
+  color: #fff;
+}
+
+.prosoft .icon-box {
+  padding: 30px;
+  position: relative;
+  overflow: hidden;
+  background: transparent;
+  box-shadow: 0 0 50px 0 rgba(110, 59, 89, 0.12);
+  transition: all 0.3s ease-in-out;
+  border-radius: 10px;
+  z-index: 1;
+  margin-bottom: 10px;
+  text-align: center;
+  border-style: dotted;
+  border-color: #c74ac1;
+}
+
+.prosoft .icon-box::before {
+  content: '';
+  position: absolute;
+  background: transparent;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  top: 100%;
+  transition: all 0.3s;
+  z-index: -1;
+}
+
+
+.prosoft .icon {
+  margin-bottom: 15px;
+}
+
+.prosoft .icon i {
+  font-size: 48px;
+  line-height: 1;
+  color: #c74ac1;
+  transition: all 0.3s ease-in-out;
+}
+
+
+.prosoft .title {
+  font-weight: 700;
+  margin-bottom: 15px;
+  font-size: 18px;
+}
+
+.prosoft .title a {
+  color: #fff;
+}
+
+.prosoft-title {
+  text-align: center;
+  padding-bottom: 30px;
+}
+
+.prosoft-title h2{
+  color: #fff;
+  font-size: 32px;
+  font-weight: bold;
+  position: relative;
+  margin-bottom: 10px;
+  z-index: 2;
+}
+
+.prosoft-title p {
+  margin-bottom: 0;
+}
+
+.prosoft .description {
+  font-size: 15px;
+  line-height: 28px;
+  margin-bottom: 0;
+}
+
+.prosoft .description {
+  cursor: default;
+}
+
+.prosoft .title {
+  cursor: default;
+}
+
+.prosoft .icon-box:hover .title a, .prosoft .icon-box:hover .description {
+  color: #fff;
+}
+
+.prosoft .icon-box:hover {
+  border-color: #fff;
+}
+
+.prosoft .icon-box:hover .icon i {
+  color: #fff;
+}
+
+
+/*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
 #header {
