--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,118 +81,6 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 90px;
 }
 
-/*--------------------------------------------------------------
-# prosoft
---------------------------------------------------------------*/
-.prosoft {
-  background: linear-gradient(rgba(2, 0, 9, 0.95), rgba(43, 29, 61, 0.7)), url("https://images.unsplash.com/photo-1487017159836-4e23ece2e4cf?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=751&q=80") fixed center center;
-  background-size: cover;
-  padding: 60px 0;
-}
-
-.prosoft h3 {
-  color: #fff;
-  font-size: 28px;
-  font-weight: 700;
-}
-
-.prosoft p {
-  color: #fff;
-}
-
-.prosoft .icon-box {
-  padding: 30px;
-  position: relative;
-  overflow: hidden;
-  background: transparent;
-  box-shadow: 0 0 50px 0 rgba(110, 59, 89, 0.12);
-  transition: all 0.3s ease-in-out;
-  border-radius: 10px;
-  z-index: 1;
-  margin-bottom: 10px;
-  text-align: center;
-  border-style: dotted;
-  border-color: #c74ac1;
-}
-
-.prosoft .icon-box::before {
-  content: '';
-  position: absolute;
-  background: transparent;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  top: 100%;
-  transition: all 0.3s;
-  z-index: -1;
-}
-
-
-.prosoft .icon {
-  margin-bottom: 15px;
-}
-
-.prosoft .icon i {
-  font-size: 48px;
-  line-height: 1;
-  color: #c74ac1;
-  transition: all 0.3s ease-in-out;
-}
-
-
-.prosoft .title {
-  font-weight: 700;
-  margin-bottom: 15px;
-  font-size: 18px;
-}
-
-.prosoft .title a {
-  color: #fff;
-}
-
-.prosoft-title {
-  text-align: center;
-  padding-bottom: 30px;
-}
-
-.prosoft-title h2{
-  color: #fff;
-  font-size: 32px;
-  font-weight: bold;
-  position: relative;
-  margin-bottom: 10px;
-  z-index: 2;
-}
-
-.prosoft-title p {
-  margin-bottom: 0;
-}
-
-.prosoft .description {
-  font-size: 15px;
-  line-height: 28px;
-  margin-bottom: 0;
-}
-
-.prosoft .description {
-  cursor: default;
-}
-
-.prosoft .title {
-  cursor: default;
-}
-
-.prosoft .icon-box:hover .title a, .prosoft .icon-box:hover .description {
-  color: #fff;
-}
-
-.prosoft .icon-box:hover {
-  border-color: #fff;
-}
-
-.prosoft .icon-box:hover .icon i {
-  color: #fff;
-}
 
 
 /*--------------------------------------------------------------
@@ -1090,6 +978,111 @@ section {
 .hire .icon-box:hover .icon i {
   color: #fff;
 }
+
+/*--------------------------------------------------------------
+# prosoft
+--------------------------------------------------------------*/
+.prosoft .prosoft-item {
+  margin-bottom: 30px;
+}
+
+.prosoft #prosoft-flters {
+  padding: 0;
+  margin: 0 auto 35px auto;
+  list-style: none;
+  text-align: center;
+  background: #c74ac138;
+  border-radius: 50px;
+  padding: 2px 15px;
+}
+
+.prosoft #prosoft-flters li {
+  cursor: pointer;
+  display: inline-block;
+  padding: 10px 15px 8px 15px;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1;
+  text-transform: uppercase;
+  color: #2f4d5a;
+  margin-bottom: 5px;
+  transition: all 0.3s ease-in-out;
+}
+
+.prosoft #prosoft-flters li:hover, .prosoft #prosoft-flters li.filter-active {
+  color: #ca58c6;
+}
+
+.prosoft #prosoft-flters li:last-child {
+  margin-right: 0;
+}
+
+.prosoft .prosoft-wrap {
+  transition: 0.3s;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.prosoft .prosoft-wrap::before {
+  content: "";
+  background: rgba(255, 255, 255, 0.5);
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  transition: all ease-in-out 0.3s;
+  z-index: 2;
+  opacity: 0;
+}
+
+.prosoft .prosoft-wrap .prosoft-links {
+  opacity: 1;
+  left: 0;
+  right: 0;
+  bottom: -60px;
+  z-index: 3;
+  position: absolute;
+  transition: all ease-in-out 0.3s;
+  display: flex;
+  justify-content: center;
+}
+
+.prosoft .prosoft-wrap .prosoft-links a {
+  color: #fff;
+  font-size: 28px;
+  text-align: center;
+  background: rgb(240 176 245 / 1);
+  transition: 0.3s;
+  width: 100%;
+  border-radius: 0.5rem;
+}
+
+.prosoft .prosoft-wrap .prosoft-links a:hover {
+  background: rgb(200 80 195 / 1);
+  cursor: pointer;
+}
+
+.prosoft .prosoft-wrap .prosoft-title-pdf {
+  text-align: center;
+  margin-bottom: -0.1rem;
+  font-weight: 600;
+}
+
+.prosoft .prosoft-wrap:hover::before {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 1;
+}
+
+.prosoft .prosoft-wrap:hover .prosoft-links {
+  opacity: 1;
+  bottom: 0;
+}
+
 /*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
@@ -1556,6 +1549,25 @@ section {
 .team .member .social i {
   font-size: 16px;
   margin: 0 2px;
+}
+
+
+.team .owl-nav, .team .owl-dots {
+  margin-top: 5px;
+  text-align: center;
+}
+
+.team .owl-dot {
+  display: inline-block;
+  margin: 0 5px;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: #ddd !important;
+}
+
+.team .owl-dot.active {
+  background-color: #c74ac1 !important;
 }
 
 @media (max-width: 992px) {
